--- a/dz.html
+++ b/dz.html
@@ -7,6 +7,32 @@
     <title>Работа с текстом</title>
 </head>
 <body>
-    
+    <table border="2" width="55%">
+    <tr>
+        <td colspan="2" align="center">Заголовок</td>
+    </tr>
+    <tr height="450">
+        <td align="left" valign="top">содержание:</td>
+        <td align="center" valign="middle">В одну ячейку вложена целая таблица!! 
+            <table bgcolor="87CEEB" width="55%" height="300">
+            <tr>
+                <td>1</td>
+                <td bgcolor="98FB98">2</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td bgcolor="98FB98">4</td>
+                <td bgcolor="FF69B4">5</td>
+                <td bgcolor="98FB98">6</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td bgcolor="98FB98">8</td>
+                <td>9</td>
+            </tr>
+        </table>
+    </td>
+    </tr>
+</table>
 </body>
 </html>
